@@ -20,6 +20,7 @@ Revision 4.4.5, released 2018-04-XX
 - Fixed broken InetAddressType rendering caused by a pyasn1 regression
 - Fixed typo in RFC1158 module
 - Fixed possible infinite loop in GETBULK response PDU builder
+- Fixed memory leak in the T`config.delContext()` VACM management harness
 
 Revision 4.4.4, released 2018-01-03
 -----------------------------------
